Archive2/48/c5d59d6873b738/output
main.cpp:5:81: error: expected unqualified-id before '{' token
 std::ostream & operator<<(std::ostream &os, std::vector<std::string> const& v); {
                                                                                 ^
