Archive2/48/c5d59d6873b738/main.cpp
#include <vector>
#include <string>
#include <iostream>

std::ostream & operator<<(std::ostream &os, std::vector<std::string> const& v); {
    for (auto const& s : v)
        os << s << ' ';
    return os;
}
 
int main(){
    
}